iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__simple_commands_test_1_mds1.local_1.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405e7ca5156565041c1a626ac2f6",
    "scsi80": "SLIO-ORG mgt1            e7ca5156-5650-41c1-a626-ac2f688929f5",
    "major": "8",
    "minor": "32",
    "devpath": "/devices/platform/host3/session2/target3:0:0/3:0:0:0/block/sdc",
    "size": 536870912,
    "filesystem_type": "mpath_member",
    "fs_uuid": "6323713067103715180",
    "fs_label": "mgt",
    "paths": [
      "/dev/disk/by-id/scsi-36001405e7ca5156565041c1a626ac2f6",
      "/dev/disk/by-id/wwn-0x6001405e7ca5156565041c1a626ac2f6",
      "/dev/disk/by-path/fc---lun-0",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-0",
      "/dev/disk/by-label/mgt",
      "/dev/disk/by-uuid/6323713067103715180",
      "/dev/sdc"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-0",
          "serial": "36001405e7ca5156565041c1a626ac2f6",
          "scsi80": "SLIO-ORG mgt1            e7ca5156-5650-41c1-a626-ac2f688929f5",
          "dm_name": "mpatha",
          "size": 536870912,
          "major": "253",
          "minor": "0",
          "filesystem_type": "zfs_member",
          "fs_uuid": "6323713067103715180",
          "fs_label": "mgt",
          "paths": [
            "/dev/mapper/mpatha",
            "/dev/disk/by-id/dm-name-mpatha",
            "/dev/disk/by-id/dm-uuid-mpath-36001405e7ca5156565041c1a626ac2f6",
            "/dev/disk/by-label/mgt",
            "/dev/disk/by-uuid/6323713067103715180",
            "/dev/dm-0"
          ],
          "children": [
            {
              "Zpool": {
                "guid": 6323713067103715180,
                "name": "mgt",
                "health": "ONLINE",
                "state": "ACTIVE",
                "size": 520093696,
                "vdev": {
                  "Root": {
                    "children": [
                      {
                        "Disk": {
                          "guid": 4548129379425950464,
                          "state": "ONLINE",
                          "path": "/dev/mapper/mpatha",
                          "dev_id": "dm-uuid-mpath-36001405e7ca5156565041c1a626ac2f6",
                          "phys_path": null,
                          "whole_disk": false,
                          "is_log": false
                        }
                      }
                    ],
                    "spares": [],
                    "cache": []
                  }
                },
                "props": [],
                "children": [
                  {
                    "Dataset": {
                      "guid": 5895517485023414823,
                      "name": "mgt/mgt",
                      "kind": "filesystem",
                      "props": [
                        {
                          "name": "name",
                          "value": "mgt/mgt"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1587638032"
                        },
                        {
                          "name": "used",
                          "value": "3154432"
                        },
                        {
                          "name": "available",
                          "value": "382489600"
                        },
                        {
                          "name": "referenced",
                          "value": "3154432"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "131072"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/mgt/mgt"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "10"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "5895517485023414823"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3154432"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3154432"
                        },
                        {
                          "name": "logicalused",
                          "value": "1721856"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1721856"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "MGS"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "4132"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:index",
                          "value": "65535"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        }
                      ],
                      "mount": null
                    }
                  }
                ],
                "mount": {
                  "source": "mgt",
                  "target": "/mgt",
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl"
                }
              }
            }
          ],
          "mount": null
        }
      }
    ]
  }
}
